--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAgYBzxHNgB5yv72HGwZHBWrzNNTB1kMGA"></script>
-</head>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgYBzxHNgB5yv72HGwZHBWrzNNTB1kMGA&callback=initMap"
+    async defer></script>
 
 <body class="mat-typography">
   <app-root></app-root>
